Fix: Enable hiding of search field on mobile and edit weird behavior in smaller screens

--- a/hirola/front/static/front/css/base.css
+++ b/hirola/front/static/front/css/base.css
@@ -6,10 +6,6 @@ li {
     margin-right: 0px !important;
 }
 
-.brand-logo {
-    /* margin-left: 20px; */
-}
-
 .btn-small {
     height: 30px;
     line-height: 30px;
@@ -26,7 +22,7 @@ form .input-field {
     height: 40px;
     line-height: 20px;
     padding: 0 0.5rem;
-    border-radius:105px;
+    border-radius: 105px;
     width: 100%;
 }
 
@@ -43,4 +39,15 @@ input[type="text"] {
 input:focus {
     border-bottom: none!important;
     box-shadow: none!important;
+}
+
+@media only screen and (max-width: 767px) {
+    .btn-small {
+        border: 1px solid black;
+        border-radius: 5px;
+        margin-left: 18px;
+    }
+    li {
+        margin-right: 10px;
+    }
 }
